samples/_failures_safe/1761158844_c32da9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9936178a.c: In function ‘main’:
./samples/SAFE/__tmp_9936178a.c:183:24: error: missing terminating " character
  183 |                 printf("
      |                        ^
./samples/SAFE/__tmp_9936178a.c:183:17: error: expected expression at end of input
  183 |                 printf("
      |                 ^~~~~~
./samples/SAFE/__tmp_9936178a.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9936178a.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9936178a.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9936178a.c:183:17: error: expected declaration or statement at end of input
